test-cases/valid/reject/duplicate_function_name.ul
void main() {
    foo();
}

void foo() {
}

void foo() {
    float f;
    print f;
}